--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,5 +1,5 @@
 <ion-header-bar class="bar-positive">
-    <a href="#/done"><button class="button button-icon ion-checkmark"></button></a>
+    <a ng-click="goToCompleted()"><button class="button button-icon ion-checkmark"></button></a>
     <h1 class="title">What Now</h1>
        <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
