--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-positive">
     <div class="buttons">
-        <a href="#"><button class="button button-icon ion-home"></button></a>
-        <a href="#/done"><button class="button button-icon ion-checkmark"></button></a>
+        <a ng-click="goHome()"><button class="button button-icon ion-home"></button></a>
+        <a ng-click="goToCompleted()"><button class="button button-icon ion-checkmark"></button></a>
     </div>
     <h1 class="title">Activity</h1>
     <div class="completion buttons">
