move actie form to higher scope

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,6 +1,6 @@
 <ion-header-bar class="bar-positive">
     <div class="buttons">
-        <a ng-click="goHome()"><button class="button button-icon ion-home"></button></a>
+        <a ng-click="goHome()"><button class="button button-icon ion-ios7-circle-outline"></button></a>
         <a ng-click="goToCompleted()"><button class="button button-icon ion-checkmark"></button></a>
     </div>
     <h1 class="title">Activity</h1>
