--- a/templates/activities-completed.html
+++ b/templates/activities-completed.html
@@ -1,6 +1,6 @@
 <ion-header-bar class="bar-positive">
-    <a ng-click="goHome()"><button class="button button-icon ion-home"></button></a>
-    <h1 class="title">Completed Activities</h1>
+    <a ng-click="goHome()"><button class="button button-icon ion-ios7-circle-outline"></button></a>
+    <h1 class="title">Done and Dusted</h1>
     <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
