--- a/templates/activity-open-item.html
+++ b/templates/activity-open-item.html
@@ -1,11 +1,16 @@
 <span ng-show="activity.private"><i class='icon ion-key'></i></span>
 
-<span ng-show="activity.status===2"><i class='icon ion-ios7-timer'></i></span>
-<span ng-show="activity.status===3"><i class='icon ion-flame'></i></span>
-<span ng-show="activity.status===4"><i class='icon ion-fireball'></i></span>
+<div class="row">
+    <div class="col-10">
+        <span ng-show="activity.status===0"><i class='icon ion-ios7-circle-outline'></i></span>
+        <span ng-show="activity.status===2"><i class='icon ion-ios7-timer'></i></span>
+        <span ng-show="activity.status===3"><i class='icon ion-flame'></i></span>
+        <span ng-show="activity.status===4"><i class='icon ion-fireball'></i></span>
+    </div>
+    <div class="col-90">
+        <span> {{activity.title}}</span>
+        <!--<br />for <owners></owners>-->
+        <span class="item-note">{{activity.duration * 15}} min</span>
 
-<span> {{activity.title}}</span>
-<span class="item-note">{{activity.duration * 15}} min</span>
-<br />for {{activity.users}}<br />
-
-<!--status {{activity.status}}<br />-->
+    </div>
+</div>
