--- a/templates/activity.html
+++ b/templates/activity.html
@@ -40,11 +40,11 @@
                     <!--Status:-->
                 <!--</div>-->
                 <div class="col">
-                    <span ng-show="status === 0">Open</span>
-                    <span ng-show="status === 1" class="balanced">Completed</span>
-                    <span ng-show="status === 2" class="assertive">Urgent</span>
-                    <span ng-show="status === 3" class="assertive">Important</span>
-                    <span ng-show="status === 4" class="assertive">Urgent & Important</span>
+                    <span ng-show="activity.status === 0">Open</span>
+                    <span ng-show="activity.status === 1" class="balanced">Completed</span>
+                    <span ng-show="activity.status === 2" class="assertive">Urgent</span>
+                    <span ng-show="activity.status === 3" class="assertive">Important</span>
+                    <span ng-show="activity.status === 4" class="assertive">Urgent & Important</span>
                 </div>
                 <!--<div class="col"></div>-->
             </div>
