--- a/templates/form-activity.html
+++ b/templates/form-activity.html
@@ -14,11 +14,14 @@
                 </label>
 
                 <label class="item item-input">
-                    <span class="input-label">Duration</span>
+                    <span class="input-label">Max Duration</span>
                     <div class="range range-positive">
-                        <input type="range" ng-model="activity.duration" min="0" max="8" value="1"> {{activity.duration * 15}}<span ng-show="activity.duration == 8">+ </span> min
+                        <input type="range" ng-model="activity.duration" min="0" max="8" value="1"> {{activity.duration * 15}}
+                        <span ng-show="activity.duration == 8">+ </span> min
                     </div>
+                    <!--<div ng-hide="activity.duration == 8">max</div>-->
                 </label>
+
 
                 <li class="item item-divider">
                     Best Context:
@@ -27,7 +30,7 @@
                 <label class="item item-radio">
                     <input type="radio" name="group" value="home" ng-model="activity.context">
                     <div class="item-content">
-                        <i class="icon ion-home"></i>  From Home
+                        <i class="icon ion-home"></i> From Home
                     </div>
                     <i class="radio-icon ion-checkmark"></i>
                 </label>
@@ -58,10 +61,8 @@
 
 
                 <li class="item item-divider">
-                    Benefits:
+                    For:
                 </li>
-
-                {{activity.users}}
 
                 <li class="item item-checkbox" ng-repeat="user in users">
                     <label class="checkbox">
@@ -70,9 +71,10 @@
                     <i class="icon ion-{{user.icon}}"></i> {{user.name}}
                 </li>
 
-                <label class="item item-input">
-                    <!--<span class="input-label">Note</span>-->
-                    <textarea placeholder="Instructions" ng-model="activity.instructions"></textarea>
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Instructions</span>
+                    <!--<input type="text" placeholder="john@suhr.com">-->
+                    <textarea placeholder="how would you delegate this?" ng-model="activity.instructions"></textarea>
                 </label>
 
                 <li class="item item-item-input">
@@ -90,14 +92,14 @@
                     </label>Important
                 </li>
 
-                <li class="item item-item-input">
-                    <label class="toggle toggle-assertive">
-                        <input type="checkbox" ng-model="activity.private">
-                        <div class="track">
-                            <div class="handle"></div>
-                        </div>
-                    </label>Private
-                </li>
+                <!--<li class="item item-item-input">-->
+                    <!--<label class="toggle toggle-assertive">-->
+                        <!--<input type="checkbox" ng-model="activity.private">-->
+                        <!--<div class="track">-->
+                            <!--<div class="handle"></div>-->
+                        <!--</div>-->
+                    <!--</label>Private-->
+                <!--</li>-->
 
 
 
