--- a/templates/activity-complete-item.html
+++ b/templates/activity-complete-item.html
@@ -5,7 +5,7 @@
         <i class="icon ion-checkmark balanced"></i>
     </div>
     <div class="col col-90">
-        <span class="crossedOut">{{activity.title}}</span>
+        <span>{{activity.title}}</span>
     </div>
 </div>
 <div class="row">
@@ -15,7 +15,7 @@
         <doers></doers> for <owners></owners><br />
     </div>
     <div class="col col">
-        <span ng-show="isSelfless(activity)" class="balanced">selfless</span>
+        <span ng-show="isSelfless(activity)" class="balanced">selfless!</span>
     </div>
 
 </div>
