--- a/templates/activity-complete-item.html
+++ b/templates/activity-complete-item.html
@@ -15,7 +15,7 @@
         <doers></doers> for <owners></owners><br />
     </div>
     <div class="col col">
-        <span ng-show="isSelfless(activity)" class="balanced">selfless!</span>
+        <span ng-show="isSelfless(activity)" class="energized">selfless!</span>
     </div>
 
 </div>
