--- a/templates/activity-open-item.html
+++ b/templates/activity-open-item.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-10">
-        <span ng-show="activity.status===0"><i class='icon ion-ios7-circle-outline'></i></span>
+        <!--<span ng-show="activity.status===0"><i class='icon ion-ios7-circle-outline'></i></span>-->
         <span ng-show="activity.status===2"><i class='icon ion-ios7-timer'></i></span>
         <span ng-show="activity.status===3"><i class='icon ion-flame'></i></span>
         <span ng-show="activity.status===4"><i class='icon ion-fireball'></i></span>
