--- a/templates/activity.html
+++ b/templates/activity.html
@@ -77,7 +77,9 @@
                     <div class="col col-100"><b>Instructions:</b></div>
                 </div>
                 <div class="row">
-                    <div class="col col-100">{{ activity.instructions || "none" }}</div>
+                    <div class="col col-100">
+                        {{ activity.instructions || "none" }}
+                    </div>
                 </div>
             </div>
 
