--- a/templates/activities-completed.html
+++ b/templates/activities-completed.html
@@ -10,7 +10,7 @@
     <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
-<user-bar users="users" tagged="userTags"></user-bar>
+<user-bar users="users" tagged="userTags" class="bar bar-subheader"></user-bar>
 
 <ion-content id="doneActivities" class="has-header has-subheader">
     <ion-list>
