--- a/templates/user-bar.html
+++ b/templates/user-bar.html
@@ -1,4 +1,4 @@
-<div class="bar bar-subheader tabs tabs-icon-left bar-neutral">
+<div class="tabs tabs-icon-left bar-neutral">
     <!--<a class="tab-item" >All</a>-->
     <a ng-repeat="user in users | orderByPriority | orderBy: '-points'" class="tab-item has-badge"
        ng-click="toggleUserTag(user.name)"
