--- a/templates/activities.html
+++ b/templates/activities.html
@@ -15,7 +15,7 @@
        <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
-<user-bar users="users" tagged="userTags"></user-bar>
+<user-bar class="bar bar-subheader" users="users" tagged="userTags"></user-bar>
 
 <ion-content id="activities" class="has-header has-subheader">
     <!--<p><input type="text" ng-model="test"></p>-->
