--- a/templates/activity-open-item.html
+++ b/templates/activity-open-item.html
@@ -9,6 +9,7 @@
     </div>
     <div class="col-90">
         <span> {{activity.title}}</span>
+        {{activity.list}}
         <!--<br />for <owners></owners>-->
         <span class="item-note">{{activity.duration * 15}} min</span>
 
