move activity form into its own directive

--- a/templates/activities.html
+++ b/templates/activities.html
@@ -12,7 +12,7 @@
 
 
     </h1>
-       <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
+       <open-activity-form icon="ion-compose"></open-activity-form>
 </ion-header-bar>
 
 <user-bar class="bar bar-subheader" users="users" tagged="userTags"></user-bar>
