--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,12 +1,12 @@
 <ion-header-bar class="bar-positive">
     <div class="buttons">
         <a ng-click="goHome()"><button class="button button-icon ion-ios7-circle-outline"></button></a>
-        <a ng-click="goToCompleted()"><button class="button button-icon ion-checkmark"></button></a>
+        <!--<a ng-click="goToCompleted()"><button class="button button-icon ion-checkmark"></button></a>-->
     </div>
     <h1 class="title">Activity</h1>
     <div class="completion buttons">
         <button class="button button-icon ion-trash-b" ng-click="deleteActivity()"></button>
-        <button class="button button-icon ion-edit" ng-click="openActivityForm()"></button>
+        <open-activity-form icon="ion-edit"></open-activity-form>
     </div>
 </ion-header-bar>
 
